Refactor fakeplayer config and fix some subcommand